installation of styled component dev dependencies
co-authored-by: Milly <millipede-cpu@users.noreply.github.com>
co-authored-by: Peter <PJSalter@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "homepage": "https://github.com/PJSalter/Testing#readme",
   "devDependencies": {
     "@playwright/test": "^1.25.2"
+  },
+  "dependencies": {
+    "styled-components": "^5.3.5"
   }
 }
