babel plugin for styled components
co-authored-by: Milly <millipede-cpu@users.noreply.github.com>
co-authored-by: Peter <PJSalter@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "homepage": "https://github.com/PJSalter/Testing#readme",
   "devDependencies": {
-    "@playwright/test": "^1.25.2"
+    "@playwright/test": "^1.25.2",
+    "babel-plugin-styled-components": "^2.0.7"
   },
   "dependencies": {
     "styled-components": "^5.3.5"
