--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-styled-components": "^2.0.7"
   },
   "dependencies": {
+    "@types/babel-plugin-macros": "^2.8.5",
     "styled-components": "^5.3.5"
   },
   "resolutions": {
