--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@types/babel-plugin-macros": "^2.8.5",
+    "@types/styled-components": "^5.1.26",
     "styled-components": "^5.3.5"
   },
   "resolutions": {
