--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/babel-plugin-macros": "^2.8.5",
     "@types/styled-components": "^5.1.26",
+    "react-router-dom": "^6.4.1",
     "styled-components": "^5.3.5"
   },
   "resolutions": {
