--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/babel-plugin-macros": "^2.8.5",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.26",
+    "react-is": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "styled-components": "^5.3.5",
     "v7": "^1.0.1"
