--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-plugin-styled-components": "^2.0.7"
   },
   "dependencies": {
+    "@fontsource/open-sans": "^4.5.14",
     "@types/babel-plugin-macros": "^2.8.5",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.26",
