--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^8.2.5",
-    "babel-plugin-styled-components": "^2.0.7"
+    "babel-plugin-styled-components": "^2.0.7",
+    "vite-plugin-fonts": "^0.7.0"
   },
   "dependencies": {
-    "@fontsource/open-sans": "^4.5.14",
     "@types/babel-plugin-macros": "^2.8.5",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.26",
