--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.3",
     "react-is": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "styled-components": "^5.3.5",
