--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
     "@storybook/builder-vite": "^0.2.7",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
+    "@types/mocha": "^10.0.1",
     "babel-loader": "^8.2.5",
     "babel-plugin-styled-components": "^2.0.7",
+    "mocha": "^10.2.0",
     "vite-plugin-fonts": "^0.7.0"
   },
   "dependencies": {
     "@types/babel-plugin-macros": "^2.8.5",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.26",
+    "i": "^0.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.3",
