--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/PJSalter/Testing#readme",
   "devDependencies": {
     "@babel/core": "^7.19.3",
+    "@babel/preset-typescript": "^7.21.4",
+    "@jest/globals": "^29.5.0",
     "@playwright/test": "^1.25.2",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
@@ -31,6 +33,8 @@
     "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^8.2.5",
     "babel-plugin-styled-components": "^2.0.7",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.1.0",
     "vite-plugin-fonts": "^0.7.0"
   },
   "dependencies": {
