updated packages to show ts tests and updated typescript jest test
Co-authored-by: Peter <PJSalter@users.noreply.github.com>
Co-authored-by: Milly <millipede-cpu@users.noreply.github.com>

--- a/app/tsconfig.node.json
+++ b/app/tsconfig.node.json
@@ -1,9 +1,21 @@
+// {
+//   "compilerOptions": {
+//     "composite": true,
+//     "module": "ESNext",
+//     "moduleResolution": "Node",
+//     "allowSyntheticDefaultImports": true
+//   },
+//   "include": ["vite.config.ts"]
+// }
 {
   "compilerOptions": {
     "composite": true,
-    "module": "ESNext",
-    "moduleResolution": "Node",
-    "allowSyntheticDefaultImports": true
+    "module": "esnext",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "target": "es2017",
+    "jsx": "react-jsx",
+    "lib": ["es2017", "dom"]
   },
-  "include": ["vite.config.ts"]
+  "include": ["src", "src/__tests__"]
 }
