fixed ts-node to run and updated configurations for jest test
Co-authored-by: Peter <PJSalter@users.noreply.github.com>
Co-authored-by: Milly <millipede-cpu@users.noreply.github.com>

--- a/app/tsconfig.node.json
+++ b/app/tsconfig.node.json
@@ -17,5 +17,5 @@
     "jsx": "react-jsx",
     "lib": ["es2017", "dom"]
   },
-  "include": ["src", "src/__tests__"]
+  "include": ["src", "src/__tests__", "jest.config.ts"]
 }
