--- a/app/package.json
+++ b/app/package.json
@@ -50,6 +50,7 @@
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react": "^2.1.0",
     "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
