--- a/package.json
+++ b/package.json
@@ -34,15 +34,21 @@
     "@storybook/testing-library": "^0.0.13",
     "babel-loader": "^8.2.5",
     "babel-plugin-styled-components": "^2.0.7",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "jest": "^29.5.0",
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4",
     "vite-plugin-fonts": "^0.7.0"
   },
   "dependencies": {
+    "@babel/preset-react": "^7.18.6",
     "@types/babel-plugin-macros": "^2.8.5",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.26",
+    "babel-jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.3",
