Remove test from scripts on app directory package.json
Co-authored-by: Peter <PJSalter@users.noreply.github.com>
Co-authored-by: Milly <millipede-cpu@users.noreply.github.com>

--- a/app/package.json
+++ b/app/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "test": "jest"
+    "preview": "vite preview"
   },
   "jest": {
     "preset": "ts-jest/presets/default"
