--- a/app/tsconfig.node.json
+++ b/app/tsconfig.node.json
@@ -1,12 +1,3 @@
-// {
-//   "compilerOptions": {
-//     "composite": true,
-//     "module": "ESNext",
-//     "moduleResolution": "Node",
-//     "allowSyntheticDefaultImports": true
-//   },
-//   "include": ["vite.config.ts"]
-// }
 {
   "compilerOptions": {
     "composite": true,
@@ -17,5 +8,5 @@
     "jsx": "react-jsx",
     "lib": ["es2017", "dom"]
   },
-  "include": ["src", "../__tests__", "src/jest.config.ts", "src/__tests__"]
+  "include": ["src", "src/__tests__", "../jest.config.ts", "src/__tests__"]
 }
