Add test:e2e command to package.json for running playwright e2e tests
Co-authored-by: Peter <PJSalter@users.noreply.github.com>
Co-authored-by: Milly <millipede-cpu@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "test": "jest"
+    "test": "jest",
+    "test:e2e": "npx playwright test --config=playwright.config.ts"
   },
   "repository": {
     "type": "git",
