--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "@storybook/builder-vite": "^0.2.7",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.1",
     "babel-loader": "^8.2.5",
     "babel-plugin-styled-components": "^2.0.7",
     "babel-plugin-transform-react-jsx": "^6.24.1",
@@ -56,6 +58,7 @@
     "react-is": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "styled-components": "^5.3.5",
+    "typescript": "^5.0.4",
     "v7": "^1.0.1",
     "vite": "^4.2.0"
   },
