Remove jsx extension to debug test syntax error
Co-authored-by: Peter <PJSalter@users.noreply.github.com>
Co-authored-by: Milly <millipede-cpu@users.noreply.github.com>

--- a/app/tsconfig.node.json
+++ b/app/tsconfig.node.json
@@ -5,7 +5,7 @@
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
     "target": "es2017",
-    "jsx": "react-jsx",
+    "jsx": "react",
     "lib": ["es2017", "dom"]
   },
   "include": ["src", "src/__tests__", "../jest.config.ts", "src/__tests__"]
