Remove app folder, update all imports and configs
Co-authored-by: Peter <PJSalter@users.noreply.github.com>
Co-authored-by: Milly <millipede-cpu@users.noreply.github.com>

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -8,5 +8,11 @@
     "jsx": "react",
     "lib": ["es2017", "dom"]
   },
-  "include": ["src", "src/__tests__", "../jest.config.ts", "src/__tests__"]
+  "include": [
+    "src",
+    "src/__tests__",
+    "../jest.config.ts",
+    "src/__tests__",
+    "stories"
+  ]
 }
