--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "noEmit": true,
     "jsx": "react"
   },
-  "include": ["src/**/*", "src/__tests__", "../jest.config.ts"],
+  "include": ["src/**/*", "src/__tests__", "../jest.config.ts", "/stories"],
   "exclude": ["node_modules", "**/*.test.ts", "**/*.test.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
