--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.26",
     "babel-jest": "^29.5.0",
+    "install": "^0.13.0",
     "jest-environment-jsdom": "^29.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
