add preinstall in scripts to prevent other devs from accidentally installing dependencies with anything else than pnpm

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "preinstall": "npx only-allow pnpm",
     "dev": "vite",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
