--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@babel/core": "^7.22.20",
     "@babel/preset-typescript": "^7.22.15",
     "@jest/globals": "^29.7.0",
+    "@jest/types": "^29.6.3",
     "@playwright/test": "^1.38.1",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
@@ -38,6 +39,8 @@
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.5",
+    "@types/react": "^18.2.22",
+    "@types/react-dom": "^18.2.7",
     "babel-loader": "^8.3.0",
     "babel-plugin-styled-components": "^2.1.4",
     "babel-plugin-transform-react-jsx": "^6.24.1",
@@ -45,7 +48,7 @@
     "react-test-renderer": "^18.2.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.0.4",
+    "typescript": "^5.2.2",
     "vite-plugin-fonts": "^0.7.0"
   },
   "dependencies": {
@@ -62,7 +65,6 @@
     "react-is": "^18.2.0",
     "react-router-dom": "^6.16.0",
     "styled-components": "^5.3.11",
-    "typescript": "^5.2.2",
     "v7": "^1.0.1",
     "vite": "^4.4.9"
   },
