--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "dev": "vite",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "test": "jest",
     "test:e2e": "npx playwright test --config=playwright.config.ts"
   },
@@ -29,13 +29,13 @@
     "@jest/globals": "^29.7.0",
     "@jest/types": "^29.6.3",
     "@playwright/test": "^1.38.1",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-vite": "^0.2.7",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/addon-actions": "^7.4.4",
+    "@storybook/addon-essentials": "^7.4.4",
+    "@storybook/addon-interactions": "^7.4.4",
+    "@storybook/addon-links": "^7.4.4",
+    "@storybook/react": "^7.4.4",
+    "@storybook/react-vite": "^7.4.4",
+    "@storybook/testing-library": "^0.2.1",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.5",
@@ -46,6 +46,7 @@
     "babel-plugin-transform-react-jsx": "^6.24.1",
     "jest": "^29.7.0",
     "react-test-renderer": "^18.2.0",
+    "storybook": "^7.4.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
@@ -53,12 +54,14 @@
   },
   "dependencies": {
     "@babel/preset-react": "^7.22.15",
+    "@storybook/preview-web": "^7.4.4",
     "@types/babel-plugin-macros": "^2.8.5",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.27",
     "babel-jest": "^29.7.0",
     "install": "^0.13.0",
     "jest-environment-jsdom": "^29.7.0",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.11",
