--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/babel-plugin-macros": "^2.8.5",
     "@types/storybook__react": "^5.2.1",
     "@types/styled-components": "^5.1.27",
+    "@vanilla-extract/css": "^1.17.4",
     "babel-jest": "^29.7.0",
     "install": "^0.13.0",
     "jest-environment-jsdom": "^29.7.0",
